--- a/scripts/scriptSink/eeFec.Rmd
+++ b/scripts/scriptSink/eeFec.Rmd
@@ -49,7 +49,7 @@ head(ff)
 # Get medians
 
 # by treatment combinations
-ffm <- survfit(Surv(age, status == 2) ~ adultTreat,
+ffm <- survfit(Surv(age, status) ~ adultTreat,
                    conf.type = "log", 
                    conf.int = 0.95,
                    type = "kaplan-meier",
